--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.20.0",
+    "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
     "zustand": "^4.4.7"
   },
